--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,17 +6,28 @@
    <meta name="author" content="Ricardo Tomasi" />
 	<!--
 	todo: INSERT FEED
-	-->
    <link href="http://feeds.feedburner.com/ricardocc" rel="alternate" title="Ricardo Tomasi" type="application/atom+xml" />
+	-->
 
+	<link rel="profile" href="http://microformats.org/profile/hcard">
+	
+	<!--[if lt IE 9]>
+	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+	<!--<link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono|Droid+Serif|Ubuntu|Ubuntu:500' rel='stylesheet' type='text/css' /> -->
+	
    <link rel="stylesheet" href="/styles/syntax.css" />
    <link rel="stylesheet/less" href="/styles/base.less" />
-	<script src="/js/less.js"></script>
+	<script src="/scripts/less-1.0.41.min.js"></script>
 
 </head>
+{% if page.date %}
+<body class="page">
+{% else %}
 <body>
+{% endif %}
 	
-	<header>
+	<header id="header">
 		<h1>Ricardo Tomasi</h1>
 	</header>
 	
@@ -24,8 +35,26 @@
 		{{ content }}
 	</section>
 	
-	<footer>
-		<p>Ricardo Tomasi 2010 - http://ricardo.cc</p>
+	<footer id="footer">
+		<section class="vcard">
+			<div class="col">
+				<span class="fn n">
+					<span class="given-name">Ricardo</span> 
+					<span class="family-name">Tomasi</span>
+				</span>
+				<a class="email" href="mailto:ricardobeat@gmail.com">ricardobeat@gmail.com</a>
+			</div>
+			<ul class="col">
+				<li><a class="url vhidden" href="http://ricardo.cc/">http://ricardo.cc</a></li>
+				<li><a class="url" rel="me" href="http://github.com/ricardobeat">http://github.com/ricardobeat</a></li>
+				<li><a class="url" rel="me" href="http://br.linkedin.com/in/ricardotomasi">http://br.linkedin.com/in/ricardotomasi</a></li>
+				<span class="org vcard"><a class="url fn org" rel="group" href="http://grifotecnologia.com.br">Grifo</a></span>
+			</ul>
+			<span class="geo vhidden">
+				<abbr class="latitude" title="-30.033056">S 30° 03.3056</abbr>
+				<abbr class="longitude" title="-51.23">W 51° 23</abbr>
+			</span>
+		</section>
 	</footer>
 
 </body>
