--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,17 @@
 ---
 layout: default
 ---
-<div class="post">
-{{ content }}
-</div>
+<article class="post">
+	{{ content }}
+</article>
 
-<div id="related">
+{% if site.related_posts != empty %}
+<aside id="related">
 	<h2>Related Posts</h2>
 	<ul class="posts">
 	{% for post in site.related_posts limit:3 %}
-		<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+		<li><time>{{ post.date | date_to_string }}</time> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
 	{% endfor %}
 	</ul>
-</div>
+</aside>
+{% endif %}
