--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,12 @@
    <link rel="stylesheet" href="/styles/syntax.css" />
    <link rel="stylesheet/less" href="/styles/base.less" />
 	<script src="/scripts/less-1.0.41.min.js"></script>
-
+	<script>
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-21731259-1']);
+	  _gaq.push(['_trackPageview']);
+	</script>
+	<script src="//www.google-analytics.com/ga.js"></script>
 </head>
 {% if page.date %}
 <body class="page">
@@ -46,6 +51,7 @@
 			<ul class="col">
 				<li><a class="url vhidden" href="http://ricardo.cc/">http://ricardo.cc</a></li>
 				<li><a class="url" rel="me" href="http://github.com/ricardobeat">http://github.com/ricardobeat</a></li>
+				<li><a class="url" rel="me" href="http:/twitter.com/ricardotomasi">http://twitter.com/ricardobeat</a></li>
 				<li><a class="url" rel="me" href="http://br.linkedin.com/in/ricardotomasi">http://br.linkedin.com/in/ricardotomasi</a></li>
 				<span class="org vcard"><a class="url fn org" rel="group" href="http://grifotecnologia.com.br">Grifo</a></span>
 			</ul>
