added projects to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,12 @@
 	</section>
 	
 	<footer id="footer">
+		<section class="projects">
+			<h2>Projects</h2>
+			<ul>
+				<li><a href="http://code.ricardo.cc/rgbclock">RGB Clock</a></li>
+			</ul>
+		</section>
 		<section class="vcard">
 			<div class="col">
 				<span class="fn n">
