--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,11 @@
    <meta charset="utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Ricardo Tomasi" />
+
+	<meta name="HandheldFriendly" content="True" />
+	<meta name="MobileOptimized" content="480" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	
 	<!--
 	todo: INSERT FEED
    <link href="http://feeds.feedburner.com/ricardocc" rel="alternate" title="Ricardo Tomasi" type="application/atom+xml" />
@@ -56,9 +61,9 @@
 			</div>
 			<ul class="col">
 				<li><a class="url vhidden" href="http://ricardo.cc/">http://ricardo.cc</a></li>
-				<li><a class="url" rel="me" href="http://github.com/ricardobeat">http://github.com/ricardobeat</a></li>
-				<li><a class="url" rel="me" href="http:/twitter.com/ricardotomasi">http://twitter.com/ricardobeat</a></li>
-				<li><a class="url" rel="me" href="http://br.linkedin.com/in/ricardotomasi">http://br.linkedin.com/in/ricardotomasi</a></li>
+				<li><a class="url" rel="me" href="http://github.com/ricardobeat">github</a></li>
+				<li><a class="url" rel="me" href="http:/twitter.com/ricardotomasi">twitter</a></li>
+				<li><a class="url" rel="me" href="http://br.linkedin.com/in/ricardotomasi">linkedin</a></li>
 				<span class="org vcard"><a class="url fn org" rel="group" href="http://grifotecnologia.com.br">Grifo</a></span>
 			</ul>
 			<span class="geo vhidden">
