--- a/styles/base.less
+++ b/styles/base.less
@@ -197,7 +197,7 @@ h1 {
 
 #content .post {
 	a[rel=external] {
-		content: ” ” url(/images/external.gif);
+		content: " " url(/images/external.gif);
 	}
 	blockquote {
 		font-family: @sans;
