--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,12 +59,12 @@
 				</span>
 				<a class="email" href="mailto:ricardobeat@gmail.com">ricardobeat@gmail.com</a>
 			</div>
-			<ul class="col">
+			<ul class="col links">
 				<li><a class="url vhidden" href="http://ricardo.cc/">http://ricardo.cc</a></li>
 				<li><a class="url" rel="me" href="http://github.com/ricardobeat">github</a></li>
 				<li><a class="url" rel="me" href="http:/twitter.com/ricardotomasi">twitter</a></li>
 				<li><a class="url" rel="me" href="http://br.linkedin.com/in/ricardotomasi">linkedin</a></li>
-				<span class="org vcard"><a class="url fn org" rel="group" href="http://grifotecnologia.com.br">Grifo</a></span>
+				<li class="org vcard"><a class="url fn org" rel="group" href="http://grifotecnologia.com.br">grifo</a></li>
 			</ul>
 			<span class="geo vhidden">
 				<abbr class="latitude" title="-30.033056">S 30° 03.3056</abbr>
