better mobile text display

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
 {% endif %}
 	
 	<header id="header">
-		<h1>Ricardo Tomasi</h1>
+		<h1><a href="/">Ricardo Tomasi</a></h1>
 	</header>
 	
 	<section id="content">
