--- a/styles/base.less
+++ b/styles/base.less
@@ -46,7 +46,7 @@ strong, th { font-weight: 700; }
 th, td, td img { vertical-align: middle; }
 sub { vertical-align: sub; font-size: smaller; }
 sup { vertical-align: super; font-size: smaller; }
-pre { padding: 15px; white-space: pre; white-space: pre-wrap; white-space: pre-line; word-wrap: break-word; }
+pre { padding: 15px; white-space: pre; white-space: pre; word-wrap: break-word; }
 textarea { overflow: auto; }
 label, input[type="button"], input[type="submit"], input[type="image"], button { cursor: pointer; }
 button, input, select, textarea { margin: 0; }
