fix code size/padding

--- a/styles/base.less
+++ b/styles/base.less
@@ -220,7 +220,7 @@ h1 {
 		time { color:#fff; }
 	}
 	p { margin:1em 0; }
-	p > code { padding:0 2px; background-color:#eee; }
+	p > code { padding:0 2px; background-color:#eee; font-size:90%; }
 }
 
 #content h1 {
