--- a/styles/syntax.css
+++ b/styles/syntax.css
@@ -1,4 +1,4 @@
-.highlight { background-color: #333333; padding:10px; color:#eaeaea; }
+.highlight { background-color: #333333; color:#eaeaea; }
 .highlight .c { color: #008800; font-style: italic; background-color: #0f140f } /* Comment */
 .highlight .err { color: #ffffff } /* Error */
 .highlight .g { color: #ffffff } /* Generic */
