--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
 {% else %}
 <body>
 {% endif %}
+<div id="wrap">
 	
 	<header id="header">
 		<h1><a href="/">Ricardo Tomasi</a></h1>
@@ -73,5 +74,6 @@
 		</section>
 	</footer>
 
+</div>
 </body>
 </html>
