--- a/styles/base.less
+++ b/styles/base.less
@@ -54,6 +54,49 @@ input[disabled], select[disabled], textarea[disabled] { opacity:0.8; color:#777;
 button {  width: auto; overflow: visible; }
 .ie7 img { -ms-interpolation-mode: bicubic; }
 
+/* for scrollbar padding */
+body {
+	position:absolute;
+	top:0;
+	right:10px;
+	bottom:0;
+	left:0;
+	overflow-y:scroll;
+	overflow-x:hidden;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+
+::-webkit-scrollbar-button:start:decrement,
+::-webkit-scrollbar-button:end:increment {
+    display: block;
+    height: 10px;
+}
+
+::-webkit-scrollbar-button:vertical:increment {
+    background-color: #fff;
+}
+
+::-webkit-scrollbar-track-piece {
+    background-color: #eee;
+    -webkit-border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+    height: 50px;
+    background-color: #ccc;
+    -webkit-border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+    width: 50px;
+    background-color: #ccc;
+    -webkit-border-radius: 3px;
+}
+
 // ----------------------- // mixins
 .border-radius(@radius: 3px) {
   -webkit-border-radius: @radius;
@@ -113,15 +156,18 @@ button {  width: auto; overflow: visible; }
 
 html {
 	background-color:#fbfbfb;
+	overflow:auto;
 }
 body {
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: none;
+}
+#wrap {
 	max-width:940px;
 	min-width:280px;
 	margin:0 auto;
 	padding:60px 20px 80px;
 	position:relative;
-	-webkit-text-size-adjust: 100%;
-	-ms-text-size-adjust: none;
 }
 
 body, select, input, textarea { 
@@ -219,8 +265,8 @@ h1 {
 		.text-shadow(-1px -1px 0 #aaa);
 		time { color:#fff; }
 	}
-	p { margin:1em 0; }
-	p > code { padding:0 2px; background-color:#eee; font-size:90%; }
+	p { margin:1em 0; line-height:1.4; }
+	p > code { padding:0 2px; background-color:#eee; font-size:92%; }
 }
 
 #content h1 {
@@ -352,8 +398,19 @@ h1 {
 	.highlight { .border-radius(6px 0 0 6px); }
 }
 
+@media only screen and (max-device-width:1024px) {
+	body {
+		position: relative;
+		top: auto;
+		right: auto;
+		bottom: auto;
+		left: auto;
+		overflow: auto;
+	}
+}
+
 @media only screen and (max-height: 560px) {
-	body { padding-bottom:20px; }
+	#wrap { padding-bottom:20px; }
 	#footer {
 		position:static;
 		margin-top:20px;
