--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 <article class="post">
+	<div class="date">
+		<time datetime="{{ page.date | date_to_xmlschema }}" pubdate>{{ page.date | date_to_string }}</time>
+	</div>
 	{{ content }}
 </article>
 
@@ -10,7 +13,7 @@ layout: default
 	<h2>Related Posts</h2>
 	<ul class="posts">
 	{% for post in site.related_posts limit:3 %}
-		<li><time>{{ post.date | date_to_string }}</time> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+		<li><a href="{{ post.url }}">{{ post.title }}</a></li>
 	{% endfor %}
 	</ul>
 </aside>
