--- a/styles/base.less
+++ b/styles/base.less
@@ -168,7 +168,8 @@ legend, .vhidden {
 
 time {
 	color:#aaa;
-	font-family: @mono;
+	//font-family: @mono;
+	font-family: "Lucida Grande", sans-serif;
 }
 
 #content {
@@ -203,7 +204,7 @@ h1 {
 .page { padding-top:40px; }
 
 .page #header {
-	h1 { font-size:13px; }
+	h1 { font-size:15px; }
 }
 
 #content .post {
@@ -216,18 +217,14 @@ h1 {
 		strong { font-weight:700; }
 		overflow:hidden;
 	}
-	h1, .date {
+	h1 {
 		display:inline-block;
 		vertical-align:middle;
 		margin-bottom:10px;
 	}
 	.date {
 		font-size:0.875em;
-		padding:1px 3px;
-		.border-radius(3px);
-		background-color:#bbb;
-		.text-shadow(-1px -1px 0 #aaa);
-		time { color:#fff; }
+		padding:1px 3px 10px;
 	}
 	p { margin:1em 0; line-height:1.4; }
 	p > code { padding:0 2px; background-color:#eee; font-size:92%; }
@@ -242,7 +239,7 @@ h1 {
 
 #related {
 	margin:60px 0 20px;
-	font-size:0.9em;
+	time { font-size:0.95em; }
 	ul {
 		padding-left:20px;
 		list-style:disc inside;
@@ -289,7 +286,7 @@ h1 {
 	border-top:1px solid #dfdfdf;
 	padding:0 0 10px;
 	background-color:#fbfbfb;
-	font-size:0.8em;
+	font-size:0.9em;
 	line-height:1.2;
 	z-index:8;
 	/*
@@ -324,6 +321,7 @@ h1 {
 		min-width:200px;
 	}
 	ul { text-align:right; }
+ 	.n { padding-bottom:3px; display:block; }
 	.email { display:block; }
 	
 	.projects {
@@ -347,6 +345,7 @@ h1 {
 			float:right;
 			width:100px;
 			&:nth-child(2n+2) { clear: both; }
+			padding-bottom:3px;
 		}
 	}
 }
@@ -366,6 +365,10 @@ h1 {
 }
 
 @media only screen and (max-width: 480px) {
+	.posts {
+		a { display:block; margin-top:5px; line-height:1.2; }
+		time { font-size:0.9em; }
+	}
 	#footer {
 		height:120px;
 		&:after { bottom:120px; }
