--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,9 @@
 	<script src="/scripts/less-1.0.41.min.js"></script>
 	<script>
 	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-21731259-1']);
-	  _gaq.push(['_trackPageview']);
+	  _gaq.push(['_setAccount', 'UA-21731259-1'])
+	  _gaq.push(['_trackPageview'])
+	  _gaq.push(['_trackPageLoadTime'])
 	</script>
 	<script src="//www.google-analytics.com/ga.js"></script>
 </head>
