--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,4 +17,15 @@ layout: default
 	{% endfor %}
 	</ul>
 </aside>
+
+<div id="disqus_thread"></div>
+<script>
+    var disqus_shortname = 'ricardotomasi'; // required: replace example with your forum shortname
+	 (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
 {% endif %}
