--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,12 +20,13 @@ layout: default
 
 <div id="disqus_thread"></div>
 <script>
-    var disqus_shortname = 'ricardotomasi'; // required: replace example with your forum shortname
-	 (function () {
-        var s = document.createElement('script'); s.async = true;
-        s.type = 'text/javascript';
-        s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
-        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    }());
+    var disqus_shortname = 'ricardotomasi';
+    var disqus_identifier = 'ricardocc_{{ page.date | date_to_xmlschema }}';
+    var disqus_url = '{{ post.url }}';
+	 (function() {
+	        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+	        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	    })();
 </script>
 {% endif %}
