--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
 		<section class="projects">
 			<h2>Projects</h2>
 			<ul>
-				<li><a href="http://code.ricardo.cc/rgbclock">RGB Clock</a></li>
+				<li><a href="http://ricardo.cc/rgbclock">RGB Clock</a></li>
 			</ul>
 		</section>
 		<section class="vcard">
