fix twitter url on footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
 			<ul class="col links">
 				<li><a class="url vhidden" href="http://ricardo.cc/">http://ricardo.cc</a></li>
 				<li><a class="url" rel="me" href="http://github.com/ricardobeat">github</a></li>
-				<li><a class="url" rel="me" href="http:/twitter.com/ricardotomasi">twitter</a></li>
+				<li><a class="url" rel="me" href="http:/twitter.com/ricardobeat">twitter</a></li>
 				<li><a class="url" rel="me" href="http://br.linkedin.com/in/ricardotomasi">linkedin</a></li>
 				<li class="org vcard"><a class="url fn org" rel="group" href="http://grifotecnologia.com.br">grifo</a></li>
 			</ul>
