--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,7 @@
 			<h2>Projects</h2>
 			<ul>
 				<li><a href="http://ricardo.cc/rgbclock">RGB Clock</a></li>
+				<li><a href="http://listen.to.ricardo.cc/">What should I listen to?</a></li>
 			</ul>
 		</section>
 		<section class="vcard">
