adjust list styles

--- a/styles/base.less
+++ b/styles/base.less
@@ -239,6 +239,12 @@ h1 {
 		padding-left:1em;
 	}
 	p > code { padding:0 2px; background-color:#eee; font-size:92%; }
+	ul, ol { padding-left:2em; }
+	ol li {
+		list-style:decimal inside;
+		color: #09395F;
+		padding-bottom:5px;
+	}
 }
 
 #content {
