--- a/styles/base.css
+++ b/styles/base.css
@@ -353,6 +353,14 @@ h1 a {
   background-color: #eee;
   font-size: 92%;
 }
+#content .post ul, #content .post ol {
+  padding-left: 2em;
+}
+#content .post ol li {
+  list-style: decimal inside;
+  color: #09395F;
+  padding-bottom: 5px;
+}
 #content h1 {
   font-size: 24px;
   margin-bottom: 0;
