fix titles and description one more time

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="utf-8" />
 	{% if page.date %}
-	<title>{{ page.title }} | Ricardo Tomasi</title>
+	<title>{{ page.title }} &laquo; ricardo.cc</title>
 	{% else %}
 	<title>{{ page.title }}</title>
 	{% endif %}
@@ -13,8 +13,8 @@
 	<meta name="MobileOptimized" content="480" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
-	<meta name="description" content="Ricardo Tomasi - web development and design, from back to front"/> 
-  <meta name="keywords" content="web, development, code, html, css, javascript, html5, css3, js, coffeescript, grifo, porto alegre, brazil, brasil, seo, interface, design, ixd, ux, interaction"/>
+	<meta name="description" content="Stories about code, design, coffee and other good stuff."/> 
+  <meta name="keywords" content="html5, css3, coffeescript, javascript, node.js, web development, code, front-end, client-side, interface, design, interaction design, user experience, porto alegre"/>
 	
    <link href="http://ricardo.cc/atom.xml" rel="alternate" title="Ricardo Tomasi" type="application/atom+xml" />
 
