--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="utf-8" />
 	{% if page.date %}
-	<title>{{ page.title }} &laquo; ricardo.cc</title>
+	<title>{{ page.title }} | ricardo.cc</title>
 	{% else %}
 	<title>{{ page.title }}</title>
 	{% endif %}
