enable analytics hash

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-21731259-1'])
 	  _gaq.push(['_setDomainName', '.ricardo.cc'])
-	  _gaq.push(['_setAllowHash', false])
+	  //_gaq.push(['_setAllowHash', false]) only needed for deep sub-domains
 	  _gaq.push(['_trackPageview'])
 	  _gaq.push(['_trackPageLoadTime'])
 	</script>
