turn on async GA loading

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="/styles/syntax.css" />
   <link rel="stylesheet" href="/styles/base.css" />
   
+	<script src="//www.google-analytics.com/ga.js" async></script>
 	<script>
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-21731259-1'])
@@ -35,7 +36,6 @@
 	  _gaq.push(['_trackPageview'])
 	  _gaq.push(['_trackPageLoadTime'])
 	</script>
-	<script src="//www.google-analytics.com/ga.js"></script>
 	
 </head>
 {% if page.date %}
