--- a/styles/syntax.css
+++ b/styles/syntax.css
@@ -35,7 +35,7 @@
     background-color: #777;
     -webkit-border-radius: 3px;
 }
-.highlight .c { color: #008800; font-style: italic; background-color: #0f140f } /* Comment */
+.highlight .c { color: #6a6a6a; font-style: italic; } /* Comment */
 .highlight .err { color: #ffffff } /* Error */
 .highlight .g { color: #ffffff } /* Generic */
 .highlight .k { color: #fb660a; font-weight: bold } /* Keyword */
@@ -44,10 +44,10 @@
 .highlight .o { color: #ffffff } /* Operator */
 .highlight .x { color: #ffffff } /* Other */
 .highlight .p { color: #ffffff } /* Punctuation */
-.highlight .cm { color: #008800; font-style: italic; background-color: #0f140f } /* Comment.Multiline */
-.highlight .cp { color: #ff0007; font-weight: bold; font-style: italic; background-color: #0f140f } /* Comment.Preproc */
-.highlight .c1 { color: #008800; font-style: italic; background-color: #0f140f } /* Comment.Single */
-.highlight .cs { color: #008800; font-style: italic; background-color: #0f140f } /* Comment.Special */
+.highlight .cm { color: #6a6a6a; font-style: italic; } /* Comment.Multiline */
+.highlight .cp { color: #6a6a6d; font-style: italic; } /* Comment.Preproc */
+.highlight .c1 { color: #6a6a6a; font-style: italic; } /* Comment.Single */
+.highlight .cs { color: #6a6a6a; font-style: italic; } /* Comment.Special */
 .highlight .gd { color: #ffffff } /* Generic.Deleted */
 .highlight .ge { color: #ffffff } /* Generic.Emph */
 .highlight .gr { color: #ffffff } /* Generic.Error */
@@ -87,17 +87,17 @@
 .highlight .mh { color: #0086f7; font-weight: bold } /* Literal.Number.Hex */
 .highlight .mi { color: #0086f7; font-weight: bold } /* Literal.Number.Integer */
 .highlight .mo { color: #0086f7; font-weight: bold } /* Literal.Number.Oct */
-.highlight .sb { color: #0086d2 } /* Literal.String.Backtick */
-.highlight .sc { color: #0086d2 } /* Literal.String.Char */
-.highlight .sd { color: #0086d2 } /* Literal.String.Doc */
-.highlight .s2 { color: #0086d2 } /* Literal.String.Double */
-.highlight .se { color: #0086d2 } /* Literal.String.Escape */
-.highlight .sh { color: #0086d2 } /* Literal.String.Heredoc */
-.highlight .si { color: #0086d2 } /* Literal.String.Interpol */
-.highlight .sx { color: #0086d2 } /* Literal.String.Other */
-.highlight .sr { color: #0086d2 } /* Literal.String.Regex */
-.highlight .s1 { color: #0086d2 } /* Literal.String.Single */
-.highlight .ss { color: #0086d2 } /* Literal.String.Symbol */
+.highlight .sb { color: #0091e2 } /* Literal.String.Backtick */
+.highlight .sc { color: #0091e2 } /* Literal.String.Char */
+.highlight .sd { color: #0091e2 } /* Literal.String.Doc */
+.highlight .s2 { color: #0091e2 } /* Literal.String.Double */
+.highlight .se { color: #0091e2 } /* Literal.String.Escape */
+.highlight .sh { color: #0091e2 } /* Literal.String.Heredoc */
+.highlight .si { color: #0091e2 } /* Literal.String.Interpol */
+.highlight .sx { color: #0091e2 } /* Literal.String.Other */
+.highlight .sr { color: #0091e2 } /* Literal.String.Regex */
+.highlight .s1 { color: #0091e2 } /* Literal.String.Single */
+.highlight .ss { color: #0091e2 } /* Literal.String.Symbol */
 .highlight .bp { color: #ffffff } /* Name.Builtin.Pseudo */
 .highlight .vc { color: #fb660a } /* Name.Variable.Class */
 .highlight .vg { color: #fb660a } /* Name.Variable.Global */
