--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,6 +86,18 @@
 			</span>
 		</section>
 	</footer>
+	
+	{% unless page.date %}
+	<banner id="adsense">
+	    <script>
+        google_ad_client = "ca-pub-7929057657473864";
+        google_ad_slot = "4714209316";
+        google_ad_width = google_ad_height = 125;
+        </script>
+        <script src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+	</banner>
+	{% endunless %}
+	
 </div>
 <script>(function(){
 	function trackOutbound(){
